--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: go
 
+arch:
+  - AMD64
+  - ppc64le
+
 go:
-  - 1.2
-  - 1.3
-  - 1.4
-  - 1.5
-  - 1.6
+  - 1.13
+  - 1.14
+  - 1.15
   - tip
